    * New option auth_by_http_header to use the value of a HTTP header
      variable for authentication (Useful in reverse proxy environments)
    * New permission that is needed for seeing views that other users
      have defined (per default this is contained in all roles)
    * New path back to the view after command exection with all
      checkboxes cleared

    Event Console:
    * New rule feature: automatically delete event after actions
    * New filter for maximum services level (minimum already existed)

    Checks & Agents:
    * solaris_mem: New check for memory and swap for Solaris agent
    * New special agent agent_vsphere for monitoring ESX (VMware) Hosts
      via vSphere interface
    * new special agent agent_random for creating random monitoring data
    * New checks: windows_intel_bonding / windows_broadcom_bonding
    * cisco_qos: adhere qos-bandwidth policies
    * Implemented SAP monitoring based on the agent plugin mk_sap. This
      must be run on a linux host. It connects via RFC calls to SAP R/3
      systems to retrieve monitoring information for this or other machines.
    * sap.dialog: Monitors SAP dialog statistics like the response time
    * sap.value: Simply processes information provided by SAP to Nagios
    * openvpn_clients: new check for OpenVPN connections
    * check_disk_smb: WATO formalization for active check check_disk_smb
    * if.include: new configurable parameters for assumed input and output speed
    * cisco_qos: new param unit:    switches between bit/byte display
                 new param average: average the values over the given minute
                 new param post can now be configured via int and float, now
                                supports percentage values
    
    Livestatus:
    * Table statehist: Improved detection of vanished hosts and services.
                       Now able to detect and remove nonsense check plugin output 

    BI: