@@ -1,9 +1,9 @@
 Title: Settings in multisite.mk without default values persist in browser cache
 Component: multisite
-Class: bug
-State: open
+State: done
 Date: 2012-09-13 17:42:33
 Targetversion: 1.2.3
+Class: bug
 
 If you write an extension (like mkeventd) that wants to put a settings
 into multisite.mk then it cannot put a default value into config.py (it
@@ -11,3 +11,6 @@ must not modify files of the main distribution). If it once sets a value in
 multisite.mk and that is later removed (factory settings) then the positive
 settings survives in the browser cache. We need to find a method how extension
 modules can define or declare default values for settings in multisite.mk
+
+2013-03-04 12:47:21: changed state open -> done
+Solved by implementing config-plugin hierarchy.
